2000-06-30  Ulrich Drepper  <drepper@redhat.com>

	* iconv/gconv_trans.c: Test with _NL_CTYPE_TRANSLIT_DEFAULT_MISSING_LEN
	whether this information is available.

	* intl/dcigettext.c (_nl_find_msg): Correct reallocation of
	buffers in case the translation is too large.  Remember allocated
	memory blocks in a list.
	(free_mem): Free memory for translations.

	* intl/tst-gettext.c: Use correct locale.  Improve error messages.

	* locale/programs/ld-ctype.c (ctype_output): If no default_missing
	information is available set the string length to zero.

	* sysdeps/i386/i686/strcmp.S: Little optimization in non-BP case.

2000-06-30  Greg McGary  <greg@mcgary.org>

	* sysdeps/powerpc/bp-asm.h: New file.
	* sysdeps/powerpc/__longjmp.S:  Check bounds.
	Wrap extern symbols in BP_SYM ().
	* sysdeps/powerpc/bsd-_setjmp.S: Likewise.
	* sysdeps/powerpc/bsd-setjmp.S: Likewise.
	* sysdeps/powerpc/setjmp.S: Likewise.
	* sysdeps/powerpc/add_n.S: Likewise.
	* sysdeps/powerpc/addmul_1.S: Likewise.
	* sysdeps/powerpc/lshift.S: Likewise.
	* sysdeps/powerpc/rshift.S: Likewise.
	* sysdeps/powerpc/mul_1.S: Likewise.
	* sysdeps/powerpc/sub_n.S: Likewise.
	* sysdeps/powerpc/submul_1.S: Likewise.
	* sysdeps/powerpc/strlen.S: Likewise.
	* sysdeps/powerpc/memset.S: Likewise.
	* sysdeps/powerpc/stpcpy.S: Likewise.
	* sysdeps/powerpc/strcmp.S: Likewise.
	* sysdeps/powerpc/strcpy.S: Likewise.
	* sysdeps/powerpc/elf/bzero.S: Likewise.

	* sysdeps/powerpc/stpcpy.S: Define & use symbolic register names.
	Line up operands column with tabs.

2000-06-30  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile (LDFLAGS-origtest): Actually add it.

	* sysdeps/ia64/htonl.S: New file.
	* sysdeps/ia64/htons.S: New file.
	* sysdeps/ia64/memcpy.S: Replace with version which does not use
	floating point registers.
	Patches by Dan Pop <Dan.Pop@cern.ch>.

2000-06-30  Andreas Jaeger  <aj@suse.de>

	* posix/Makefile (tests): tst-exec and tst-spawn only work with
	shared libraries.
