@@ -20,23 +20,13 @@ TST_STRFMON tst_strfmon_loc [] = {
     {
       {
 	/* #01 */
-#ifdef NO_WAIVER
 	/*inp*/ { 23, "%n %% %i",	     123.00			},
 	/*exp*/ { 1,0,1,22,		     "123,00 DM % 123,00 DEM"	},
-#else
-	/*inp*/ { 24, "%n %% %i",	     123.00			},
-	/*exp*/ { 1,0,1,23,		     "123,00 DM % 123,00 DEM "	},
-#endif
       },
       {
 	/* #02 */
-#ifdef NO_WAIVER
 	/*inp*/ { 23, "%n %% %i",	     123.00			},
 	/*exp*/ { 1,0,1,22,		     "123,00 DM % 123,00 DEM"	},
-#else
-	/*inp*/ { 24, "%n %% %i",	     123.00			},
-	/*exp*/ { 1,0,1,23,		     "123,00 DM % 123,00 DEM "	},
-#endif
       },
       {
 	/* #03 */
@@ -46,101 +36,57 @@ TST_STRFMON tst_strfmon_loc [] = {
       {
 	/* #04 */
 	/*inp*/ { 30, "%n|%i",	     1234.561				},
-#ifdef NO_WAIVER
 	/*exp*/ { 1,0,1,24,		     "1.234,56 DM|1.234,56 DEM"	},
-#else
-	/*exp*/ { 1,0,1,25,		     "1.234,56 DM|1.234,56 DEM "	},
-#endif
       },
       {
 	/* #05 */
 	/*inp*/ { 32, "%n|%i",	    -1234.561				},
-#ifdef NO_WAIVER
 	/*exp*/ { 1,0,1,26,		     "-1.234,56 DM|-1.234,56 DEM"},
-#else
-	/*exp*/ { 1,0,1,27,		     "-1.234,56 DM|-1.234,56 DEM "},
-#endif
       },
       {
 	/* #06 */
 	/*inp*/ { 32, "%12n|%12i",	     1234.561			},
-#ifdef NO_WAIVER
 	/*exp*/ { 1,0,1,25,		     " 1.234,56 DM|1.234,56 DEM"},
-#else
-	/*exp*/ { 1,0,1,26,		     " 1.234,56 DM|1.234,56 DEM "},
-#endif
       },
       {
 	/* #07 */
 	/*inp*/ { 32, "%12n|%12i",	    -1234.561			},
-#ifdef NO_WAIVER
 	/*exp*/ { 1,0,1,26,		     "-1.234,56 DM|-1.234,56 DEM"},
-#else
-	/*exp*/ { 1,0,1,27,		     "-1.234,56 DM|-1.234,56 DEM "},
-#endif
       },
       {
 	/* #08 */
 	/*inp*/ { 32, "%#5n|%#5i",	     1234.561			},
-#ifdef NO_WAIVER
 	/*exp*/ { 1,0,1,28,		     "  1.234,56 DM|  1.234,56 DEM"},
-#else
-	/*exp*/ { 1,0,1,29,		     "  1.234,56 DM|  1.234,56 DEM "},
-#endif
       },
       {
 	/* #09 */
 	/*inp*/ { 32, "%#5n|%#5i",	    -1234.561			},
-#ifdef NO_WAIVER
 	/*exp*/ { 1,0,1,28,		     "- 1.234,56 DM|- 1.234,56 DEM"},
-#else
-	/*exp*/ { 1,0,1,29,		     "- 1.234,56 DM|- 1.234,56 DEM "},
-#endif
       },
       {
 	/* #10 */
 	/*inp*/ { 32, "%=*#5n|%=*#5i",	 1234.561			},
-#ifdef NO_WAIVER
 	/*exp*/ { 1,0,1,28,		     " *1.234,56 DM| *1.234,56 DEM"},
-#else
-	/*exp*/ { 1,0,1,29,		     " *1.234,56 DM| *1.234,56 DEM "},
-#endif
       },
       {
 	/* #11 */
 	/*inp*/ { 32, "%=0#5n|%=0#5i",	-1234.561			},
-#ifdef NO_WAIVER
 	/*exp*/ { 1,0,1,28,		     "-01.234,56 DM|-01.234,56 DEM"},
-#else
-	/*exp*/ { 1,0,1,29,		     "-01.234,56 DM|-01.234,56 DEM "},
-#endif
       },
       {
 	/* #12 */
 	/*inp*/ { 32, "%^#5n|%^#5i",	-1234.561			},
-#ifdef NO_WAIVER
 	/*exp*/ { 1,0,1,26,		     "- 1234,56 DM|- 1234,56 DEM"},
-#else
-	/*exp*/ { 1,0,1,27,		     "- 1234,56 DM|- 1234,56 DEM "},
-#endif
       },
       {
 	/* #13 */
 	/*inp*/ { 32, "%#5.0n|%#5.0i",	 1234.444			},
-#ifdef NO_WAIVER
 	/*exp*/ { 1,0,1,22,		     "  1.234 DM|  1.234 DEM"	},
-#else
-	/*exp*/ { 1,0,1,23,		     "  1.234 DM|  1.234 DEM "	},
-#endif
       },
       {
 	/* #14 */
 	/*inp*/ { 32, "%#5.0n|%#5.4i",	-1234.555			},
-#ifdef NO_WAIVER
 	/*exp*/ { 1,0,1,27,		     "- 1.235 DM|- 1.234,5550 DEM"},
-#else
-	/*exp*/ { 1,0,1,28,		     "- 1.235 DM|- 1.234,5550 DEM "},
-#endif
       },
       {
 	/* #15 */
