@@ -56,15 +56,15 @@ de_DE.ISO-8859-1	%+n	-1234.56	-1.234,56 DM
 de_DE.ISO-8859-1	%(n	1234.56		1.234,56 DM
 de_DE.ISO-8859-1	%(n	-1234.56	(1.234,56 DM)
 de_DE.ISO-8859-1	%^n	1234.56		1234,56 DM
-de_DE.ISO-8859-1	%i	1.23		1,23 DEM 
-de_DE.ISO-8859-1	%i	-1.23		-1,23 DEM 
-de_DE.ISO-8859-1	%i	1234.56		1.234,56 DEM 
-de_DE.ISO-8859-1	%^i	1234.56		1234,56 DEM 
-de_DE.ISO-8859-1	%+i	1234.56		1.234,56 DEM 
-de_DE.ISO-8859-1	%+i	-1234.56	-1.234,56 DEM 
-de_DE.ISO-8859-1	%(i	1234.56		1.234,56 DEM 
-de_DE.ISO-8859-1	%(i	-1234.56	(1.234,56 DEM )
-de_DE.ISO-8859-1	%^i	1234.56		1234,56 DEM 
+de_DE.ISO-8859-1	%i	1.23		1,23 DEM
+de_DE.ISO-8859-1	%i	-1.23		-1,23 DEM
+de_DE.ISO-8859-1	%i	1234.56		1.234,56 DEM
+de_DE.ISO-8859-1	%^i	1234.56		1234,56 DEM
+de_DE.ISO-8859-1	%+i	1234.56		1.234,56 DEM
+de_DE.ISO-8859-1	%+i	-1234.56	-1.234,56 DEM
+de_DE.ISO-8859-1	%(i	1234.56		1.234,56 DEM
+de_DE.ISO-8859-1	%(i	-1234.56	(1.234,56 DEM)
+de_DE.ISO-8859-1	%^i	1234.56		1234,56 DEM
 de_DE.ISO-8859-1	%#5n	123.45		    123,45 DM
 de_DE.ISO-8859-1	%#5n	-123.45		-   123,45 DM
 de_DE.ISO-8859-1	%#5n	3456.781	  3.456,78 DM
