@@ -1,5 +1,15 @@
 2000-06-30  Ulrich Drepper  <drepper@redhat.com>
 
+	* stdlib/strfmon.c: Move somewhat closer to the standard wrt to
+	handling the internation currency symbol.  POSIX says that the
+	fourth character is used to separate the currency symbol from the
+	value.  Therefore it does not have to be printed.  But we cannot
+	remove the space if the currency symbol is printed before the
+	number since this is what many locales expect.
+	* localedata/tests-mbwc/dat_strfmon.c: Remove #ifdefs introduced to
+	work around DEM problem.
+	* localedata/tst-fmon.data: Change back entries with DEM.
+
 	* iconv/gconv_trans.c: Test with _NL_CTYPE_TRANSLIT_DEFAULT_MISSING_LEN
 	whether this information is available.
 
